BotCord: lots of changes typing + docstrings custom run & shutdown procedures etc.

--- a/botcord/default_guild_configs.yml
+++ b/botcord/default_guild_configs.yml
@@ -1,11 +1,11 @@
 # Guild-specific Config file
 
 guild:
-    id: ~
-    invite: ~
-    name: ~
+    id:
+    invite:
+    name:
 
 bot:
-    prefix: ~
+    prefix:
 
 ext: {}
