protect(compact=True) now prints exception type

--- a/configs/717010362234568764.yml
+++ b/configs/717010362234568764.yml
@@ -2,8 +2,8 @@
 
 guild:
     id: 717010362234568764
-    invite:
-    name: Myself
+    invite: https://discord.gg/A2bGdepRZQ
+    name: KEN's Braincells
 
 bot:
     prefix:
