--- a/configs/839457899360157706.yml
+++ b/configs/839457899360157706.yml
@@ -10,32 +10,23 @@ bot:
 
 ext:
     adv_replies:
+        enabled: true
     danked_memer:
+        enabled: true
     messagehook:
+        enabled: true
     reactomatic:
+        enabled: true
     welcomer:
+        enabled: true
         welcome_channel: 8394578993601577098
-    extensions.adv_replies.adv_info:
-        enabled: false
-    extensions.adv_replies.mojira_embed:
-        enabled: false
-    extensions.adv_replies.search_links:
-        enabled: false
-    extensions.anti_spam.anti_spam:
-        enabled: false
-    extensions.counting.letter_counting:
-        enabled: false
-    extensions.danked_memer.blackjack_assist:
-        enabled: false
-    extensions.messagehook.messagehook:
-        enabled: false
-    extensions.mod_utils.keep_roles:
-        enabled: false
-    extensions.nerd_utils.commands:
-        enabled: false
-    extensions.simple_games.minesweeper:
-        enabled: false
-    extensions.simple_games.twenty_four:
-        enabled: false
-    extensions.welcomer.member_join:
-        enabled: false
+    anti_spam:
+        enabled: true
+    counting:
+        enabled: true
+    mod_utils:
+        enabled: true
+    nerd_utils:
+        enabled: true
+    simple_games:
+        enabled: true
