where it was last left + fix to `recursive_update()`

--- a/botcord/default_global_configs.yml
+++ b/botcord/default_global_configs.yml
@@ -4,24 +4,25 @@
 
 
 bot:
-    prefix: '-BotCord '              # prefix that works everywhere
+    prefix:                          # prefixes that work everywhere
+      - '-BotCord '
     reply_to_mentions: true          # whether mentioning the bot is a valid prefix
     ignore_self: false               # if true, actions from the bot itself not trigger commands
     message_cache: 10000             # how many messages to keep in the client-side cache
     intents: all                     # todo: changed intents based on this setting
-    extension_dir: 'extensions'      # the name of the folder (under the working directory) that contains all the extension packages
+    extension_dir: extensions        # the name of the folder (under the working directory) that contains all the extension packages
 
 permissions:
     owner:
-        - ~
+      -
 
     admin:
-        - ~
+      -
 
     mod:
-        - ~
+      -
 
 log_channels:
-    debug: ~
-    info: ~
-    error: ~
+    debug:
+    info:
+    error:
