--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-aiohttp~=3.8.3
-discord.py~=2.1.0
-ruamel.yaml~=0.17.21
-beautifulsoup4~=4.11.1
-fake-useragent~=1.1.1
+discord.py==2.3.2
+aiohttp~=3.9.5
+
+ruamel.yaml~=0.18.6
+beautifulsoup4~=4.12.3
+fake-useragent>=1.5.1
