--- a/extensions/counting/configs.yml
+++ b/extensions/counting/configs.yml
@@ -3,5 +3,4 @@ channels:
   - 891592969059196988
 
 # noinspection SpellCheckingInspection
-regex: 
-    ^\s+|\s+$|(\|\|.*?\|\|)|(\s*((<:\w+:\d{18}>)|(\u00a9|\u00ae|[\u2000-\u3300]|\ud83c[\ud000-\udfff]|\ud83d[\ud000-\udfff]|\ud83e[\ud000-\udfff]))\s*)+$
+regex: ^\s+|\s+$|(\|\|.*?\|\|)|(\s*((<:\w+:\d{18}>)|(\u00a9|\u00ae|[\u2000-\u3300]|\ud83c[\ud000-\udfff]|\ud83d[\ud000-\udfff]|\ud83e[\ud000-\udfff]))\s*)+$
