update KeepRoles to clear cache after a member rejoins

--- a/extensions/mod_utils/configs.yml
+++ b/extensions/mod_utils/configs.yml
@@ -1,6 +1,2 @@
 keep_roles:
-    logs:
-        642568966296043540:
-            717010362234568764:
-              - 818143244889882694
-              - 735853118411243612
+    logs: {}
